Fix contact form honeypot visibility

--- a/styles.css
+++ b/styles.css
@@ -1367,6 +1367,7 @@ p {
 
 .hidden-honeypot,
 .hidden-honeypot * {
+  display: none !important;
   position: absolute !important;
   width: 1px !important;
   height: 1px !important;
